added footer section

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -246,7 +246,7 @@
   </section>
 
 
-  <section class="footer container-fluid">
+  <!-- <section class="footer container-fluid">
     <div class="container footer-div">
       <div>
         <h4 class="footer-head">PHP Snippets.</h4>
@@ -263,7 +263,24 @@
       </div>
     </div>
   </section>
-
+   -->
+   <footer>
+    <form class="grid1">
+      <input type="text" placeholder="Update you inbox ...">
+      <button type="submit">Subscribe</button>
+    </form>
+    <ul class="middle-footer grid2">
+      <li><a href="">Pricing</a> </li>
+      <li><a href="">Product</a> </li>
+      <li><a href="">About Us</a> </li>
+      <li><a href="">Careers</a> </li>
+      <li><a href="">Community</a> </li>
+    </ul>
+    <div class=" grid3">
+        <h1>PHP Snippets</h1>
+    </div>
+    <p class="grid5">Copyright 2022. All rights reserve.</p>
+  </footer>
 </body>
 
 </html>
