added the tutorial link

--- a/Pages/getstarted.html
+++ b/Pages/getstarted.html
@@ -160,7 +160,7 @@
                 </div>
                 <p class="mb-5">6. Congrats ! you have started a php program.
                 </p>
-                <a href="tutorial.html">Go to Tutorial </a>
+                <a href="../tutorial/Intro.html">Go to Tutorial </a>
             </div>
         </div>
     </div>
