--- a/tutorial/Strings.html
+++ b/tutorial/Strings.html
@@ -320,7 +320,7 @@
 
             </div>
             <a href="Datatypes.html" class='btn'>Previous</a>
-            <a href="Numbers.html" class="btn">Next</a>
+            <a href="Constants.html" .html" class="btn">Next</a>
         </div>
 
 
